--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_practice
 spring.datasource.username=root
 spring.datasource.password=123
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
